# prismasyncjmfjdf

./: .gitignore  README.md  RELEASE.md  pyproject.toml  release.ps1  release.sh  release_version.py  requirements.txt  setup.py
.github/workflows/: release-and-pages.yml
prismasyncjmfjdf/: __init__.py  jmfmessages.py  prismasyncjmfjdf.py
scripts/: generate_simple_index.py
tests/: test_createmime_phase2.py  test_sendmime_phase1.py
